new structure, add SASS files

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,129 @@
-@import 'normalize.css';
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 *,
 html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+* {
+  font-family: "Roboto", Verdana;
+}
+
+a {
+  text-decoration: none;
+}
+
+.app-navbar {
+  background-color: #388E3C;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  max-height: 100px;
+  min-height: 50px;
+  z-index: 3;
+}
+
+.app-navbar a {
+  font-size: 2rem;
+  color: #FFF;
+}
+
+.app-navbar ul li {
+  display: inline;
+}
+
+.app-navbar .fas {
+  font-size: 2rem;
+  cursor: pointer;
+  color: #FFF;
+}
+
+.app-navbar .filter-container {
+  width: 85%;
+}
+
+.app-navbar .filter-input {
+  display: flex;
+}
+
+/*states*/
+.app-navbar.no-search .filter-container,
+.app-navbar.no-search .fa-times {
+  display: none;
+}
+
+.app-navbar.search .filter-container,
+.app-navbar.search .fa-times {
+  display: block;
+}
+
+.app-navbar.search .navbar-logo,
+.app-navbar.search .fa-search {
+  display: none;
+}
+
+.app-navbar.no-search .navbar-logo,
+.app-navbar.no-search .fa-search {
+  display: block;
 }
 
 /*# sourceMappingURL=styles.css.map */
