--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -25,3 +25,10 @@ html {
 
 //tricks to work better------------------------------------------------------------
 
+* {
+  font-family: 'Roboto', Verdana;
+}
+
+a {
+  text-decoration: none;
+}
