--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,34 +1,34 @@
-// ======================================
-//  Reset
-// ======================================
-
+html.debug {
+    background: transparent url(/mockups/01-search.jpg) no-repeat top left;
+	background-size: 100%;
+}
+//Reset
 *,
 html {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-//tricks to work better //delete when finished.------------------------------------
-
-
-// html.debug {
-// 	// background: transparent url(/ikigai-project-5-netflix-clone-html-css-CristianDavidCabrera/mockups/00-home.jpg) no-repeat top left;
-//   background: transparent url(/ikigai-project-5-netflix-clone-html-css-CristianDavidCabrera/mockups/00-home-with-hovers.jpg) no-repeat top left;
-  
-//   background-size: 100%;
-	
-// 	body {
-// 		opacity: 0.7;
-// 	}
-// }
-
-//tricks to work better------------------------------------------------------------
-
-* {
-  font-family: 'Roboto', Verdana;
+body {
+	color: $primary-color;
+	font-family: $primary-font;
+	background-image: url("../movie-images/pelicula-inocents.svg");
+	background-repeat: no-repeat;
+	background-position: 0 0;
+	background-size: 100%;
+	background-color: $nav-bg;
+	&.no-bg {
+		background-image: none;
+		background-color: $nav-bg;
+		iframe {
+			width: 100vw;
+			height: 100vh;
+		}
+	}
 }
 
+//Remove Style of links
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
