--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,1 +1,5 @@
-@import '_navbar.scss';
+@import '_nav.scss';
+@import '_header.scss';
+@import '_main.scss';
+@import '_footer.scss';
+@import '_detail.scss';
